--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:theme="@style/Theme.SASYNonTag"
         tools:targetApi="33">
         <activity
-            android:name=".ui.AppPinCodeActivity"
+            android:name=".ui.DetailActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/FullScreenTheme">
