--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,13 +43,18 @@ ext {
     material_version = '1.9.0'
     constraintlayout_version = '2.1.4'
     gson_version = '2.9.1'
+    lifecycle_version = '2.5.1'
 }
-
+//implementation 'androidx.activity:activity-ktx:1.4.0'
+//implementation 'androidx.fragment:fragment-ktx:1.3.6'
 dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version",
             "com.google.android.material:material:$material_version",
             "androidx.constraintlayout:constraintlayout:$constraintlayout_version",
-            "com.google.code.gson:gson:$gson_version"
+            "com.google.code.gson:gson:$gson_version",
+            "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
+            "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version",
+            "androidx.navigation:navigation-fragment-ktx:$lifecycle_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
