--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:name="android.permission.BLUETOOTH_ADMIN"
         android:maxSdkVersion="30" />
 
-    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
+    <uses-permission
+        android:name="android.permission.BLUETOOTH_SCAN"
+        android:usesPermissionFlags="neverForLocation" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 
@@ -32,7 +34,7 @@
         android:theme="@style/Theme.SASYNonTag"
         tools:targetApi="33">
         <activity
-            android:name=".ui.AppPinCodeActivity"
+            android:name=".ui.DashboardActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/FullScreenTheme">
@@ -47,10 +49,10 @@
                 android:value="" />
         </activity>
 
-        <activity
-            android:name=".ui.DashboardActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/FullScreenTheme" />
+<!--        <activity-->
+<!--            android:name=".ui.DashboardActivity"-->
+<!--            android:screenOrientation="portrait"-->
+<!--            android:theme="@style/FullScreenTheme" />-->
 
 
         <activity
