--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
 }
 
 android {
@@ -26,16 +25,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
     dataBinding {
         enabled = true
     }
     buildFeatures {
         viewBinding true
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+    buildToolsVersion '30.0.3'
 }
 
 ext {
@@ -43,18 +43,21 @@ ext {
     material_version = '1.9.0'
     constraintlayout_version = '2.1.4'
     gson_version = '2.9.1'
-    lifecycle_version = '2.5.1'
+    lifecycle_version = '2.6.1'
 }
-//implementation 'androidx.activity:activity-ktx:1.4.0'
+//
 //implementation 'androidx.fragment:fragment-ktx:1.3.6'
 dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version",
             "com.google.android.material:material:$material_version",
             "androidx.constraintlayout:constraintlayout:$constraintlayout_version",
-            "com.google.code.gson:gson:$gson_version",
-            "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
-            "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version",
-            "androidx.navigation:navigation-fragment-ktx:$lifecycle_version"
+            "com.google.code.gson:gson:2.10.1"
+    
+
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    implementation "androidx.activity:activity-ktx:1.7.2"
+    implementation 'androidx.fragment:fragment-ktx:1.6.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
