--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -36,7 +37,7 @@
         android:theme="@style/Theme.SASYNonTag"
         tools:targetApi="33">
         <activity
-            android:name=".ui.DashboardActivity"
+            android:name=".ui.AppPinCodeActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/FullScreenTheme">
@@ -51,10 +52,10 @@
                 android:value="" />
         </activity>
 
-        <!--        <activity-->
-        <!--            android:name=".ui.DashboardActivity"-->
-        <!--            android:screenOrientation="portrait"-->
-        <!--            android:theme="@style/FullScreenTheme" />-->
+        <activity
+            android:name=".ui.DashboardActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/FullScreenTheme" />
 
         <service android:name=".utils.bluetooth_utils.SerialService" />
         <activity
