--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,22 +42,21 @@ ext {
     appcompat_version = '1.6.1'
     material_version = '1.9.0'
     constraintlayout_version = '2.1.4'
-    gson_version = '2.9.1'
+    gson_version = '2.10.1'
     lifecycle_version = '2.6.1'
+    activity_ktx_version = '1.7.2'
+    fragment_ktx_version = '1.6.0'
 }
-//
-//implementation 'androidx.fragment:fragment-ktx:1.3.6'
+
 dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version",
             "com.google.android.material:material:$material_version",
             "androidx.constraintlayout:constraintlayout:$constraintlayout_version",
-            "com.google.code.gson:gson:2.10.1"
-    
-
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
-    implementation "androidx.activity:activity-ktx:1.7.2"
-    implementation 'androidx.fragment:fragment-ktx:1.6.0'
+            "com.google.code.gson:gson:$gson_version",
+            "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version",
+            "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
+            "androidx.activity:activity-ktx:$activity_ktx_version",
+            "androidx.fragment:fragment-ktx:$fragment_ktx_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
