--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
             "androidx.activity:activity-ktx:$activity_ktx_version",
             "androidx.fragment:fragment-ktx:$fragment_ktx_version"
 
+    implementation 'pub.devrel:easypermissions:3.0.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
